--- a/занятие 4/styles.css
+++ b/занятие 4/styles.css
@@ -21,14 +21,16 @@ a {
 
 h1 {
     text-align: center;
-    font-family: 'SlantCYRILLIC', cursive;
+    font-family: 'SlantCYRILLIC';
     text-transform: uppercase;
     color: goldenrod;
+    font-style: italic; 
 }
 
 h2 {
-    font-family: 'SlantCYRILLIC', cursive;
+    font-family: 'SlantCYRILLIC';
     color: goldenrod;
+    font-style: italic;
 }
 
 img {
